fix headplane startup error for missing oidc.headscale_api_key

--- a/templates/secret-headplane.yaml
+++ b/templates/secret-headplane.yaml
@@ -20,4 +20,7 @@ stringData:
       token_endpoint_auth_method: {{ .Values.headplane.oidc.token_endpoint_auth_method | quote }}
       redirect_uri: {{ .Values.headplane.oidc.redirect_uri | quote }}
       client_id: {{ .Values.headplane.oidc.client_id | quote }}
-{{- end }} 
+      {{- if .Value.headplane.oidc.disable_api_key_login }}
+      headscale_api_key: "PLACEHOLDER_REPLACED_BY_ENV"
+{{- end }}
+{{- end }}
