add a way to enable pkce

--- a/templates/secret-headscale.yaml
+++ b/templates/secret-headscale.yaml
@@ -7,7 +7,7 @@ type: Opaque
 stringData:
   config.yaml: |
 {{- toYaml .Values.headscale.config | nindent 4 }}
-{{- if .Values.headscale.oidc.enabled }}
+  {{- if .Values.headscale.oidc.enabled }}
     oidc:
       issuer: {{ .Values.headscale.oidc.issuer | quote }}
       client_id: {{ .Values.headscale.oidc.client_id | quote }}
@@ -23,4 +23,9 @@ stringData:
       allowed_users:
         {{- toYaml .Values.headscale.oidc.allowed_users | nindent 8 }}
       {{- end }}
-{{- end }} 
+      {{- if .Values.headscale.oidc.pkce.enabled }}
+      pkce:
+        enabled: {{ .Values.headscale.oidc.pkce.enabled | quote }}
+        method: {{ .Values.headscale.oidc.pkce.method | quote }}
+      {{- end }}
+{{- end }}
