--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -243,9 +243,9 @@ jobs:
             fi
             
             # Check for any failed pods
-            if kubectl get pods -n "$namespace" | grep -q "Error\|CrashLoopBackOff\|ImagePullBackOff\|Terminating"; then
+            if kubectl get pods -n "$namespace" | grep -q "Error\|CrashLoopBackOff\|ImagePullBackOff\|Terminating\|Failed"; then
               echo "[$test_name] Found failed or terminating pods. Checking details..."
-              kubectl get pods -n "$namespace" | grep -E "Error|CrashLoopBackOff|ImagePullBackOff|Terminating"
+              kubectl get pods -n "$namespace" | grep -E "Error|CrashLoopBackOff|ImagePullBackOff|Terminating|Failed"
               echo -e "\n[$test_name] Pod Events:"
               kubectl get events -n "$namespace" --sort-by='.lastTimestamp' | grep -E "Error|Warning|Failed"
               echo -e "\n[$test_name] Pod Details and Logs:"
@@ -254,6 +254,20 @@ jobs:
                 kubectl describe pod -n "$namespace" "$pod" | grep -A 10 "Events:"
                 echo -e "\n[$test_name] === $pod logs ==="
                 kubectl logs -n "$namespace" "$pod" --all-containers || echo "No logs available for $pod"
+                echo -e "\n[$test_name] === $pod previous logs (if any) ==="
+                kubectl logs -n "$namespace" "$pod" --all-containers --previous || echo "No previous logs available for $pod"
+              done
+              exit 1
+            fi
+            
+            # Proactively capture logs for any pods that might be having issues
+            failed_pods=$(kubectl get pods -n "$namespace" -o jsonpath='{.items[?(@.status.phase=="Failed")].metadata.name}')
+            if [ -n "$failed_pods" ]; then
+              echo "[$test_name] Found pods in Failed state: $failed_pods"
+              for pod in $failed_pods; do
+                echo -e "\n[$test_name] === $pod logs (Failed state) ==="
+                kubectl logs -n "$namespace" "$pod" --all-containers || echo "No logs available for $pod"
+                kubectl logs -n "$namespace" "$pod" --all-containers --previous || echo "No previous logs available for $pod"
               done
               exit 1
             fi
