--- a/test/test-cases/01-definetelynobody-test-case.yaml
+++ b/test/test-cases/01-definetelynobody-test-case.yaml
@@ -8,7 +8,7 @@ headplane:
   oidc:
     # client_id: "test-headplane-client-id"
     enabled: true
-    issuer: "https://auth.test.example.com"
+    issuer: "http://mock-oidc-server"
     redirect_uri: "https://headplane.test.example.com/admin/oidc/callback"
 headscale:
   config:
@@ -18,4 +18,4 @@ headscale:
   oidc:
     client_id: "test-headscale-client-id"
     enabled: true
-    issuer: "https://auth.test.example.com"
+    issuer: "http://mock-oidc-server"
