--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -219,6 +219,16 @@ jobs:
             echo "[$test_name] Deployments: $deployment_ready_count/$deployment_total_count ready"
             echo "[$test_name] Jobs: $job_completed_count/$job_total_count completed"
             
+            # Proactively capture logs for pods that might be having issues
+            for pod in $(kubectl get pods -n "$namespace" -o jsonpath='{.items[*].metadata.name}'); do
+              pod_status=$(kubectl get pod -n "$namespace" "$pod" -o jsonpath='{.status.phase}')
+              if [ "$pod_status" = "Pending" ] || [ "$pod_status" = "Unknown" ]; then
+                echo "[$test_name] === Proactive log capture for $pod (status: $pod_status) ==="
+                kubectl describe pod -n "$namespace" "$pod"
+                kubectl logs -n "$namespace" "$pod" --all-containers || echo "No logs available for $pod"
+              fi
+            done
+            
             # Check if all deployments are ready AND all jobs are completed
             deployments_ready=false
             jobs_completed=false
@@ -260,12 +270,15 @@ jobs:
               exit 1
             fi
             
-            # Proactively capture logs for any pods that might be having issues
-            failed_pods=$(kubectl get pods -n "$namespace" -o jsonpath='{.items[?(@.status.phase=="Failed")].metadata.name}')
-            if [ -n "$failed_pods" ]; then
-              echo "[$test_name] Found pods in Failed state: $failed_pods"
-              for pod in $failed_pods; do
-                echo -e "\n[$test_name] === $pod logs (Failed state) ==="
+            # Check for any pods not in Running state
+            non_running_pods=$(kubectl get pods -n "$namespace" -o jsonpath='{.items[?(@.status.phase!="Running")].metadata.name}')
+            if [ -n "$non_running_pods" ]; then
+              echo "[$test_name] Found pods not in Running state: $non_running_pods"
+              for pod in $non_running_pods; do
+                pod_status=$(kubectl get pod -n "$namespace" "$pod" -o jsonpath='{.status.phase}')
+                echo -e "\n[$test_name] === $pod (status: $pod_status) ==="
+                kubectl describe pod -n "$namespace" "$pod"
+                echo -e "\n[$test_name] === $pod logs ==="
                 kubectl logs -n "$namespace" "$pod" --all-containers || echo "No logs available for $pod"
                 kubectl logs -n "$namespace" "$pod" --all-containers --previous || echo "No previous logs available for $pod"
               done
