--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -166,6 +166,10 @@ jobs:
           echo "Applying resources..."
           helm template rybbit . -f "$test_file" --namespace "$namespace" | kubectl apply -f - -n "$namespace"
           
+          # Give resources time to start scheduling
+          echo "Waiting for resources to start scheduling..."
+          sleep 3
+          
           # Immediate check of events and pod status
           echo "=== Initial Status Check ==="
           echo "Deployments:"
@@ -183,7 +187,7 @@ jobs:
           # Monitor deployments and jobs with continuous updates
           echo -e "\nMonitoring deployments and jobs..."
           start_time=$(date +%s)
-          timeout_seconds=30
+          timeout_seconds=60
           
           while true; do
             current_time=$(date +%s)
@@ -216,16 +220,18 @@ jobs:
               job_total_count=0
             fi
             
-            echo "[$test_name] Deployments: $deployment_ready_count/$deployment_total_count ready"
-            echo "[$test_name] Jobs: $job_completed_count/$job_total_count completed"
+            echo "[$test_name] Status: Deployments $deployment_ready_count/$deployment_total_count ready, Jobs $job_completed_count/$job_total_count completed"
             
             # Proactively capture logs for pods that might be having issues
             for pod in $(kubectl get pods -n "$namespace" -o jsonpath='{.items[*].metadata.name}'); do
               pod_status=$(kubectl get pod -n "$namespace" "$pod" -o jsonpath='{.status.phase}')
-              if [ "$pod_status" = "Pending" ] || [ "$pod_status" = "Unknown" ]; then
-                echo "[$test_name] === Proactive log capture for $pod (status: $pod_status) ==="
-                # kubectl describe pod -n "$namespace" "$pod"
-                kubectl logs -n "$namespace" "$pod" --all-containers || echo "No logs available for $pod"
+              # Only capture logs from pods that are running or have failed
+              if [ "$pod_status" = "Running" ] || [ "$pod_status" = "Failed" ] || [ "$pod_status" = "Error" ]; then
+                echo "[$test_name] Logs for $pod (status: $pod_status):"
+                kubectl logs -n "$namespace" "$pod" --all-containers --tail=5 || echo "No logs available for $pod"
+              elif [ "$pod_status" = "Pending" ]; then
+                # For pending pods, just show the status without trying to get logs
+                echo "[$test_name] Pod $pod is still pending - waiting for container to start..."
               fi
             done
             
@@ -247,8 +253,20 @@ jobs:
               jobs_completed=true
             fi
             
-            if [ "$deployments_ready" = true ] && [ "$jobs_completed" = true ]; then
-              echo "[$test_name] All deployments are ready and all jobs are completed!"
+            # Additional check: ensure all containers in running pods are ready
+            containers_ready=true
+            for pod in $(kubectl get pods -n "$namespace" -o jsonpath='{.items[?(@.status.phase=="Running")].metadata.name}'); do
+              ready_containers=$(kubectl get pod -n "$namespace" "$pod" -o jsonpath='{.status.containerStatuses[?(@.ready==true)].name}' | wc -w)
+              total_containers=$(kubectl get pod -n "$namespace" "$pod" -o jsonpath='{.status.containerStatuses[*].name}' | wc -w)
+              if [ "$ready_containers" -ne "$total_containers" ]; then
+                containers_ready=false
+                echo "[$test_name] Pod $pod has $ready_containers/$total_containers containers ready"
+                break
+              fi
+            done
+            
+            if [ "$deployments_ready" = true ] && [ "$jobs_completed" = true ] && [ "$containers_ready" = true ]; then
+              echo "[$test_name] All deployments are ready, all jobs are completed, and all containers are ready!"
               break
             fi
             
@@ -256,16 +274,12 @@ jobs:
             if kubectl get pods -n "$namespace" | grep -q "Error\|CrashLoopBackOff\|ImagePullBackOff\|Terminating\|Failed"; then
               echo "[$test_name] Found failed or terminating pods. Checking details..."
               kubectl get pods -n "$namespace" | grep -E "Error|CrashLoopBackOff|ImagePullBackOff|Terminating|Failed"
-              echo -e "\n[$test_name] Pod Events:"
-              kubectl get events -n "$namespace" --sort-by='.lastTimestamp' | grep -E "Error|Warning|Failed"
-              echo -e "\n[$test_name] Pod Details and Logs:"
+              echo "[$test_name] Recent events:"
+              kubectl get events -n "$namespace" --sort-by='.lastTimestamp' | grep -E "Error|Warning|Failed" | tail -5
+              echo "[$test_name] Pod logs:"
               for pod in $(kubectl get pods -n "$namespace" -o jsonpath='{.items[*].metadata.name}'); do
-                echo -e "\n[$test_name] === $pod ==="
-                kubectl describe pod -n "$namespace" "$pod" | grep -A 10 "Events:"
-                echo -e "\n[$test_name] === $pod logs ==="
-                kubectl logs -n "$namespace" "$pod" --all-containers || echo "No logs available for $pod"
-                echo -e "\n[$test_name] === $pod previous logs (if any) ==="
-                kubectl logs -n "$namespace" "$pod" --all-containers --previous || echo "No previous logs available for $pod"
+                echo "[$test_name] --- $pod logs ---"
+                kubectl logs -n "$namespace" "$pod" --all-containers --tail=10 || echo "No logs available for $pod"
               done
               exit 1
             fi
@@ -273,16 +287,26 @@ jobs:
             # Check for any pods not in Running state
             non_running_pods=$(kubectl get pods -n "$namespace" -o jsonpath='{.items[?(@.status.phase!="Running")].metadata.name}')
             if [ -n "$non_running_pods" ]; then
-              echo "[$test_name] Found pods not in Running state: $non_running_pods"
+              should_fail=false
               for pod in $non_running_pods; do
                 pod_status=$(kubectl get pod -n "$namespace" "$pod" -o jsonpath='{.status.phase}')
-                echo -e "\n[$test_name] === $pod (status: $pod_status) ==="
-                kubectl describe pod -n "$namespace" "$pod"
-                echo -e "\n[$test_name] === $pod logs ==="
-                kubectl logs -n "$namespace" "$pod" --all-containers || echo "No logs available for $pod"
-                kubectl logs -n "$namespace" "$pod" --all-containers --previous || echo "No previous logs available for $pod"
+                
+                # Only fail if the pod is in a failed state, not if it's still pending
+                if [ "$pod_status" = "Failed" ] || [ "$pod_status" = "Error" ] || [ "$pod_status" = "CrashLoopBackOff" ]; then
+                  should_fail=true
+                  echo "[$test_name] Pod $pod has failed status: $pod_status"
+                  kubectl logs -n "$namespace" "$pod" --all-containers --tail=10 || echo "No logs available for $pod"
+                elif [ "$pod_status" = "Pending" ]; then
+                  echo "[$test_name] Pod $pod is still pending - normal during startup"
+                else
+                  echo "[$test_name] Pod $pod has unexpected status: $pod_status"
+                  should_fail=true
+                fi
               done
-              exit 1
+              
+              if [ "$should_fail" = true ]; then
+                exit 1
+              fi
             fi
             
             # Check for failed jobs
@@ -290,19 +314,17 @@ jobs:
             if [ -n "$failed_jobs" ]; then
               echo "[$test_name] Found failed jobs: $failed_jobs"
               for job in $failed_jobs; do
-                echo -e "\n[$test_name] === Job $job details ==="
-                kubectl describe job -n "$namespace" "$job"
-                echo -e "\n[$test_name] === Job $job pod logs ==="
+                echo "[$test_name] Job $job pod logs:"
                 job_pods=$(kubectl get pods -n "$namespace" -l job-name="$job" -o jsonpath='{.items[*].metadata.name}')
                 for pod in $job_pods; do
-                  echo "[$test_name] --- Pod $pod logs ---"
-                  kubectl logs -n "$namespace" "$pod" || echo "No logs available"
+                  echo "[$test_name] --- $pod logs ---"
+                  kubectl logs -n "$namespace" "$pod" --tail=10 || echo "No logs available"
                 done
               done
               exit 1
             fi
             
-            sleep 5
+            sleep 10
           done
           
           # Cleanup with force delete
