Refactor Headscale API token handling in Helm chart
Replaces the separate headscale-api-token secret with direct injection of the generated API token into the headplane-config secret. Updates the job logic to always generate and update the config secret, removes legacy secret checks, and cleans up related references in manifests and test cases.

--- a/templates/secret-headplane.yaml
+++ b/templates/secret-headplane.yaml
@@ -20,4 +20,5 @@ stringData:
       token_endpoint_auth_method: {{ .Values.headplane.oidc.token_endpoint_auth_method | quote }}
       redirect_uri: {{ .Values.headplane.oidc.redirect_uri | quote }}
       client_id: {{ .Values.headplane.oidc.client_id | quote }}
+      headscale_api_key: {{ .Values.headplane.oidc.headscale_api_key | default "hcap_placeholder_key_for_validation_only_12345678901234567890123456789012" | quote }}
 {{- end }} 
