--- a/templates/roles.yaml
+++ b/templates/roles.yaml
@@ -57,4 +57,4 @@ rules:
     verbs: ["create"]
   - apiGroups: [""]
     resources: ["secrets"]
-    verbs: ["create", "get"]
+    verbs: ["create", "get", "update", "patch"]
