--- a/templates/statefulset-headplane.yaml
+++ b/templates/statefulset-headplane.yaml
@@ -39,6 +39,9 @@ spec:
           {{- if .Values.headplane.oidc.enabled }}
           - secretRef:
               name: {{ .Values.headplane.oidc.secret_name }}
+          - secretRef:
+              name: headscale-api-token
+              optional: true
           {{- end }}
           {{- with .Values.headplane.envFrom }}
           {{- toYaml . | nindent 10 }}
