Add delete policy to token job

--- a/templates/job.yaml
+++ b/templates/job.yaml
@@ -3,6 +3,8 @@ kind: Job
 metadata:
   name: headscale-generate-token
   namespace: {{ .Release.Namespace }}
+  annotations:
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
   template:
     spec:
